Adição arquivo de estilo, aula02

--- a/aulas/aula01/home.html
+++ b/aulas/aula01/home.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aluno Online</title>
-</head>
-<body>
+    <link rel="stylesheet" href="estilos.css">
+  </head>
+  <!-- (header>img+h1+input+img)+main>(nav>ul>li*3>a)+section>h2+article*2>h3 -->
+  <body>
     <header>
-        <img src="" alt="Logo da Aplicação"/>
-        <input type="search" name="pesquisa"/>
-        <img src="" alt="Icone da Pesquisa"/>
+        <div>
+            <img src="https://www.svgrepo.com/show/489120/school.svg" alt="Logo da Aplicação" />
+            <h1>Aluno Online</h1>
+        </div>
+        <div>
+            <input type="search" name="filtro" placeholder="Pesquisar..." />
+            <img src="https://www.svgrepo.com/show/532552/search-alt-2.svg" alt="Icone de Pesquisar" />
+        </div>
     </header>
-    <!-- menu lateral, aside -->
-    <aside>
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="perfil.html">Perfil</a></li>
-            <li><a href="index.html">Sair</a></li>
-        </ul>
-    </aside> 
     <main>
-        <h1>Home</h1>
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="perfil.html">Perfil</a></li>
+          <li><a href="index.html">Sair</a></li>
+        </ul>
+      </nav>
+      <section>
+        <h2>Página Inicial</h2>
+        <article>
+          <h3>Mural de Avisos</h3>
+        </article>
+        <article>
+          <h3>Agenda acadêmica</h3>
+        </article>
+      </section>
     </main>
-    <footer>Copyright (C) 2024</footer>
-</body>
+  </body>
 </html>
