--- a/aulas/aula01/perfil.html
+++ b/aulas/aula01/perfil.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aluno Online</title>
-</head>
-<body>
+    <link rel="stylesheet" href="estilos.css">
+  </head>
+  <!-- (header>img+h1+input+img)+main>(nav>ul>li*3>a)+section>h2+form>(label+input)*3+input -->
+  <body>
     <header>
-        <img src="" alt="Logo da Aplicação"/>
-        <input type="search" name="pesquisa"/>
-        <img src="" alt="Icone da Pesquisa"/>
+        <div>
+            <img src="https://www.svgrepo.com/show/489120/school.svg" alt="Logo da Aplicação" />
+            <h1>Aluno Online</h1>
+        </div>
+        <div>
+            <input type="search" name="filtro" placeholder="Pesquisar..." />
+            <img src="https://www.svgrepo.com/show/532552/search-alt-2.svg" alt="Icone de Pesquisar" />
+        </div>
     </header>
-    <aside>
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="perfil.html">Perfil</a></li>
-            <li><a href="index.html">Sair</a></li>
-        </ul>
-    </aside>
     <main>
-        <h1>Perfil</h1>
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="perfil.html">Perfil</a></li>
+          <li><a href="index.html">Sair</a></li>
+        </ul>
+      </nav>
+      <section>
+        <h2>Perfil do Aluno</h2>
+        <!-- div cria blocos, surge o "display: block", ou seja, ocupa a linha por completo  -->
+        <form action="" method="post">
+          <div>
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" id="nome" required />
+          </div>
+          <div>
+            <label for="email">E-mail</label>
+            <input type="email" name="email" id="email" required />
+          </div>
+          <div>
+            <label for="senha">Senha</label>
+            <input type="password" name="senha" id="senha" required />
+          </div>
+          <input type="submit" value="Salvar" />
+        </form>
+      </section>
     </main>
-    <footer>Copyright (C) 2024</footer>
-</body>
+  </body>
 </html>
