Complemento Aula02 - JavaScript

--- a/aulas/aula02/index.html
+++ b/aulas/aula02/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluno Online</title>
+    <link rel="stylesheet" href="estilos.css">
     <!-- defer, boa prática. faz ler o javascript primeiro, para depois apresentar na página -->
     <script src="index.js" defer></script>
 </head>
